--- a/src/Lab3/Views/Person/AddPerson.cshtml
+++ b/src/Lab3/Views/Person/AddPerson.cshtml
@@ -39,4 +39,7 @@
 
 
 
-@*<span class="text-danger field-validation-valid" data-valmsg-for="Price" data-valmsg-replace="true"></span>*@
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
